Contacts Page added and layout issue fixed

--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -42,7 +42,7 @@ $transition500: all 0.5s ease-in-out;
 
   &__box {
     height: 50%;
-    width: 960px;
+    width: 50%;
     border-radius: 8px;
     /* box-shadow: inset 0 0 10px $color-secAcc; */
     position: relative;
@@ -59,7 +59,7 @@ $transition500: all 0.5s ease-in-out;
 .info {
   position: absolute;
   height: calc(100% - 80px);
-  padding: 0 40px;
+  /* padding: 0 40px; */
   width: 100%;
   transition: $transition500;
 
@@ -68,7 +68,68 @@ $transition500: all 0.5s ease-in-out;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
-    padding: 0 40px;
+    /* padding: 0 40px; */
+  }
+}
+
+@media screen and (min-width: 992px){
+  .info{
+    &__content{
+      height:200px
+    }
+  }
+  .container{
+    &__box{
+      width:65%;
+    }
+  }
+}
+
+@media screen and (max-width: 992px){
+  .info{
+    &__box{
+      grid-template-columns: repeat(2, 1fr);
+    }
+    &__content{
+      height: 200px;
+    }
+  }
+  .container{
+    &__box{
+      margin-top:-120px
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .info{
+    &__box{
+      grid-template-columns: repeat(2, 1fr);
+    }
+    &__content{
+      height: 200px;
+    }
+  }
+  .container{
+    &__box{
+      margin-top:-120px
+    }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .info{
+    &__box{
+      grid-template-columns: repeat(1, 1fr);
+    }
+    &__content{
+      height:150px;
+    }
+  }
+  .container{
+    &__box{
+      margin-top:-340px
+    }
   }
 }
 
@@ -89,11 +150,11 @@ $transition500: all 0.5s ease-in-out;
     position: relative;
     @include center(column);
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     /* border-right: 1px solid $color-secAcc; */
     cursor: pointer;
 
-    &:nth-child(3) {
+    &:nth-child(4) {
       border: none;
     }
 
@@ -154,12 +215,6 @@ $transition500: all 0.5s ease-in-out;
       color: $color-sec;
     }
   }
-}
-
-.youtube {
-  position: absolute;
-  color: $color-pri;
-  top: 50px;
 }
 
 /* contact form end */
