--- a/src/components/test/test.styles.css
+++ b/src/components/test/test.styles.css
@@ -1,215 +1,86 @@
-.new {
-  height: 100vh;
-  width: auto;
+.contact-section {
+  min-height: 100vh;
   position: relative;
-  z-index: 140;
-  padding-left: 0;
-  padding-right: 0;
-  background-image: url("../../assets/bg_new.jpg");
+  background-color: bisque;
+  z-index: 130;
+  background-image: url("../../assets/projects_bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
 }
-.projectInitial{
-  opacity: 0;
-  transition: all 1.5s ease;
+
+.contact-title-container{
+  padding-top:10vh;
 }
 
-.projectFinal{
-  opacity: 1;
-  transition: all 1.5s ease;
-}
-
-.bl-main {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.bl-main > section {
-  position: absolute;
-  width: 48%;
-  height: 48%;
-}
-
-.bl-main > section:first-child {
-  top: 0;
-  left: 0;
-  background: #f06060;
-  margin:1% 1% 1% 1%;
-}
-
-.bl-main > section:nth-child(2) {
-  top: 0;
-  left: 50%;
-  background: #fa987d;
-  margin:1% 1% 1% 1%;
-}
-
-.bl-main > section:nth-child(3) {
-  top: 50%;
-  left: 0;
-  background: #72cca7;
-  margin:1% 1% 1% 1%;
-}
-
-.bl-main > section:nth-child(4) {
-  top: 50%;
-  left: 50%;
-  background: #10a296;
-  margin:1% 1% 1% 1%;
-}
-
-.bl-box {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  opacity: 1;
-  /* Centering with flexbox */
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.bl-box h2 {
+.contact-title {
+  height: 40px;
   text-align: center;
-  margin: 0;
-  padding: 20px;
-  width: 100%;
-  font-size: 1.8em;
-  letter-spacing: 2px;
-  font-weight: 700;
-  text-transform: uppercase;
+  margin: 20px;
+  letter-spacing: 8px;
 }
 
-.bl-content,
-div.bl-panel-items > div > div {
-  opacity: 0;
-  pointer-events: none;
+.info-content{
+  position: relative;
+    /* width: 100%; */
+    height: 200px;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-icon {
+  font-size: 34px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
   position: absolute;
-  top: 60px;
-  left: 30px;
-  right: 30px;
-  bottom: 30px;
-  padding: 0 20px;
-  overflow: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
+  top: 40%;
+  left:43%
 }
 
-/* Custom content */
-
-.bl-content p {
-  margin: 0 auto;
-  padding-bottom: 15px;
-  font-size: 1.7em;
-  line-height: 1.8;
+.info-details{
+  justify-content: center;
+  opacity:0;
+  transition: all 0.5s ease-in-out;
+  position: relative;
+  transform: translateY(140px);
 }
 
-.bl-content h2 {
-  font-size: 3em;
-  font-weight: 300;
-  margin: 0 0 20px 0;
+.info-icon:hover{
+  color: #f1c40f;
+  transform: translateY(-110px);
 }
 
-.bl-main > section {
-  -webkit-transition: all 2s ease-in-out;
-  -moz-transition: all 2s ease-in-out;
-  transition: all 2s ease-in-out;
-}
-
-.bl-main > section.bl-expand {
-  width: 98%;
-  height: 96%;
-  top: 0;
-  left: 0;
-}
-
-.bl-main > section.bl-expand-top {
-  z-index: 150;
-}
-
-.bl-main > section:first-child.bl-expand {
-  background: #ee4444;
-}
-.bl-main > section:nth-child(2).bl-expand {
-  background: #f98262;
-}
-.bl-main > section:nth-child(3).bl-expand {
-  background: #4bbe8e;
-}
-.bl-main > section:nth-child(4).bl-expand {
-  background: #0d8278;
-}
-
-.bl-main.bl-expand-item > section:not(.bl-expand),
-.bl-main.bl-expand-item > section.bl-scale-down {
-  -webkit-transform: scale(0.5);
-  -moz-transform: scale(0.5);
-  -ms-transform: scale(0.5);
-  transform: scale(0.5);
-  opacity: 0;
-}
-
-.bl-box {
-  -webkit-transition: opacity 0.2s linear 0.5s;
-  -moz-transition: opacity 0.2s linear 0.5s;
-  transition: opacity 0.2s linear 0.5s;
-}
-
-section.bl-expand .bl-box {
-  opacity: 0;
-  -webkit-transition: opacity 0s linear;
-  -moz-transition: opacity 0s linear;
-  transition: opacity 0s linear;
-}
-
-.bl-box h2 {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.no-touch section:not(.bl-expand) .bl-box:hover h2 {
-  -webkit-transform: translateY(-15px);
-  -moz-transform: translateY(-15px);
-  -ms-transform: translateY(-15px);
-  transform: translateY(-15px);
-}
-
-.bl-content,
-.bl-icon-close {
-  -webkit-transition: opacity 0.1s linear 0s;
-  -moz-transition: opacity 0.1s linear 0s;
-  transition: opacity 0.1s linear 0s;
-}
-
-section.bl-expand .bl-content,
-section.bl-expand .bl-icon-close {
-  pointer-events: auto;
+.info-icon:hover + .info-details{
   opacity: 1;
-  -webkit-transition: opacity 0.3s linear 0.5s;
-  -moz-transition: opacity 0.3s linear 0.5s;
-  transition: opacity 0.3s linear 0.5s;
+  transform: scale(1.2);
+  transform: translateY(50px);
+}
+
+.contact-group{
+  padding:5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.social {
+  position: absolute;
+  display: grid;
+  grid-template-columns: 50px 50px;
+  grid-gap: 30px;
+  justify-items: center;
+  align-items: center;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.social-icon{
+  color: #f1c40f;
+    padding: 13px;
+    font-size: 54px;
+    transform: rotate(-45deg);
+    transition: all 0.5s ease-in-out;
 }
